--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,16 +13,36 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.intro {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro-content {
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.intro-image img {
+  margin-left: 50px;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  object-fit: cover;
 }
