--- a/client/src/components/style/Intro.css
+++ b/client/src/components/style/Intro.css
@@ -1,5 +1,5 @@
 .intro {
-  min-height: 100vh;
+  padding: 200px 0 24px;
   display: flex;
   align-items: center;
   position: relative;
@@ -9,7 +9,6 @@
 .intro-container {
   display: flex;
   align-items: center;
-  gap: 64px;
 
   max-width: 850px;
   margin: 0 auto;
@@ -52,10 +51,10 @@
 }
 
 
-.icon-1 { top: 12%; left: 1%; animation-duration: 8s; }
-.icon-2 { top: 8%; right: 12%; animation-duration: 11s; }
-.icon-3 { bottom: 10%; left: 1.2%; animation-duration: 12s; }
-.icon-4 { bottom: 12%; right: 1%; animation-duration: 16s; }
+.icon-1 { top: 22%; left: 1%; animation-duration: 8s; }
+.icon-2 { top: 28%; right: 12%; animation-duration: 11s; }
+.icon-3 { bottom: 2%; left: 0.2%; animation-duration: 12s; }
+.icon-4 { bottom: 2%; right: 1%; animation-duration: 12s; }
 
 
 @keyframes float {
